<resources>
    <string name="app_name">MyApp</string>
    <string name="header">Vinzerano</string>
    <string name="button_start">Start wallpapering!</string>
    <string name="button_back">Back</string>
    <string name="drops_enter_button">Drops generator</string>
    <string name="tiling_enter_button">Tiling generator</string>
    <string name="label_generators_header">Choose generator!</string>
    <string name="edit_text_sizeX">Image width:</string>
    <string name="edit_text_sizeY">Image height:</string>
    <string name="label_params">Params: </string>
    <string name="edit_text_dropsQuantity">Drops quantity:</string>
    <string name="edit_text_startColor">Start color:</string>
    <string name="edit_text_finishcolor">Finish color:</string>
    <string name="edit_text_backgrColor">Background color:</string>
    <string name="edit_text_dropRadius">Drop radius:</string>
    <string name="edit_text_tailRadius">Tail radius:</string>
    <string name="edit_text_outlineWidth">Outline width:</string>
    <string name="edit_text_outlineColor">Outline color:</string>
    <string name="color_r">R:</string>
    <string name="color_g">G:</string>
    <string name="color_b">B:</string>
    <string name="run_button">Run!</string>
    <string name="show_image">Show!</string>
    <string name="save">Save!</string>
    <string name="curls_enter_button">Curls generator</string>
    <string name="messages_header">messages_header</string>
    <string name="curls_header">Curls generator</string>
    <string name="curls_steps">Steps:</string>
    <string name="curls_branch_lenght">Branch lenght:</string>
    <string name="curls_angle_shift_lim">Angle shift max:</string>
    <string name="curls_angle_shift_plus">Angle shift plus:</string>
    <string name="curls_line_width">Line width:</string>
    <string name="start_to_new_line">line to new line:</string>
    <string name="trees_qnty">trees quantity:</string>
    <string name="ok">ok</string>
    <string name="x_plates_qnty_x">Quantity of tiles in X-axis:</string>
    <string name="x_plates_qnty_y">Quantity of tiles in Y-axis:</string>
    <string name="incorrecct_image_width">Incorrecct image width</string>
    <string name="incorrecct_image_height">Incorrecct image height</string>
    <string name="incorrecct_tiling_qnty_x">Incorrecct tiles quantity on axis x</string>
    <string name="incorrecct_tiling_qnty_y">Incorrecct tiles quantity on axis y</string>
    <string name="incorrecct_settings">There is a mistake in gerenarors settings</string>

    <string name="explanation_size_x">Choose the image width</string>
    <string name="image_width">Image width</string>
    <string name="explanation_size_y">Choose the image height</string>
    <string name="image_height">Image height</string>
    <string name="explanation_steps_qnty">Choose the number of steps (how many times will every new branch give a child branch)</string>
    <string name="steps_qnty">Steps number</string>
    <string name="explanation_branch_lenght">Choose the lenght of every branch</string>
    <string name="branch_lenght">Branch lenght</string>
    <string name="explanation_angle_shift_max">Choose the "angle shift max" (every branch going to bend defined value, this is such value)</string>
    <string name="angle_shift_max">Angle shift max</string>
    <string name="explanation_angle_shift_plus">Choose the "angle shift plus" (every branch going to bend and bend value will increase every pixel, this is such value. If you put this parameter to 0 pattern will look like "tree" or "lightning". Else it will look like "curls")</string>
    <string name="angle_shift_plus">Angle shift max</string>
    <string name="explanation_line_width">Choose the width of every branch</string>
    <string name="line_width">Line width</string>
    <string name="explanation_start_color">Whole pattern will be colored in gradient, choose start color of it. You can also choose finish color of it</string>
    <string name="start_color">Start color</string>
    <string name="explanation_finish_color">Whole pattern will be colored in gradient, choose finish color of it</string>
    <string name="finish_color">Finish color</string>
    <string name="explanation_background_color">Choose color of background</string>
    <string name="background_color">Background color</string>
    <string name="explanation_LTNL">Choose quantity of branches that every branch will start</string>
    <string name="lines_to_new_line">Lines to new line</string>
    <string name="explanation_trees_qnty">Every "curls" generated pattern is a bunch of trees or once, choose number of such trees</string>
    <string name="trees_qnty_exp">Trees quantity</string>

    <string name="explanation_curls_generator">Strange as it may seem, curls generator is an instrument to generate pattern image with curls. I let you figure it out for yourself</string>
    <string name="curls_generator">Curls generator</string>
    <string name="explanation_drops_generator">This generator is an instrument to make images with drops</string>
    <string name="label_drops_generator">Drops generator</string>
    <string name="explanation_tiling_header">This generator is an instrument to make gradient-colored parquet</string>
    <string name="tiling_header">Tiling generator</string>


    <string name="explanation_drops_quantity">Choose the numder of drops. Drops will be distributed evenly throughout the image</string>
    <string name="drops_quantity">Drops numder</string>
    <string name="explanation_drops_radius">Choose the radius of every drop</string>
    <string name="drops_radius">Drops radius</string>
    <string name="explanation_tail_radius">Choose the radius of every tail (radius of circle along which tail will be drawwn)</string>
    <string name="tail_radius">Tail radius</string>
    <string name="explanation_outline_width">Choose the width of outline (every drop will be outlined, choose the width of outline)</string>
    <string name="outline_width">Outline width</string>
    <string name="explanation_outline_color">Choose the color of outline (every drop will be outlined, choose the color of outline)</string>
    <string name="outline_color">Outline color</string>

    <string name="quantity_of_plates_in_x_axis">Quantity of plates in X-axis</string>
    <string name="explanation_quantity_of_plates_in_x_axis">Set number of tiles in X-axis (how many tiles will be in one row)</string>
    <string name="quantity_of_plates_in_y_axis">Quantity of plates in Y-axis</string>
    <string name="explanation_quantity_of_plates_in_y_axis">Set number of tiles in Y-axis (how many tiles will be in one row)</string>
    <string name="explanation_outline_color_tiling">Choose the color of outline (every tile will be outlined, choose the color of outline)</string>
    <string name="outline_color_tiling">Outline color</string>
    <string name="explanation_outline_width_tiling">Choose the width of outline (every tile will be outlined, choose the width of outline)</string>
    <string name="outline_width_tiling">Outline width</string>

    <string name="brightness_tiling">Brightness:</string>
    <string name="brightness_label">Brightness</string>
    <string name="explanation_brightness_label">Choose brightness of following image</string>
    <string name="title_activity_curls2">Curls2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>