<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DropsPictureActivity">

    <ImageView
        android:id="@+id/imageViewPicDrops"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/buttonDropsShow"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/show_image"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPicDrops" />

    <Button
        android:id="@+id/buttonDropsPicBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/button_back"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonDropsShow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPicDrops" />

    <Button
        android:id="@+id/buttonDropsSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/save"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toEndOf="@+id/buttonDropsShow"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPicDrops" />

</androidx.constraintlayout.widget.ConstraintLayout>