<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurlsPictureActivity">

    <ImageView
        android:id="@+id/imageViewCurlsPic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintWidth_percent="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <Button
        android:id="@+id/buttonCurlsPicShow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/show_image"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCurlsPic"
        app:layout_constraintWidth_percent="0.325" />

    <Button
        android:id="@+id/buttonCurlsPicBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:text="@string/button_back"
        android:textSize="20sp"
        app:layout_constraintHeight_percent="0.095"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintEnd_toStartOf="@+id/buttonCurlsPicShow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCurlsPic" />

    <Button
        android:id="@+id/buttonCurlsPicSave"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:text="@string/save"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.095"
        app:layout_constraintStart_toEndOf="@+id/buttonCurlsPicShow"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCurlsPic"
        app:layout_constraintWidth_percent="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>